{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 88,
  "lineage": "3846a939-80ed-ae9d-3fee-6192d1f68c4f",
  "resources": [
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:573636633956:security-group/sg-0c6fd859db51a30fd",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-0c6fd859db51a30fd",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Node groups to cluster API",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0fd6250adb330519b"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "app-demo-cluster-cluster-2025120522292705750000000b",
            "name_prefix": "app-demo-cluster-cluster-",
            "owner_id": "573636633956",
            "revoke_rules_on_delete": false,
            "tags": {
              "Example": "app-demo-cluster",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "DevOps-Primeros-Pasos",
              "Name": "app-demo-cluster-cluster"
            },
            "tags_all": {
              "Example": "app-demo-cluster",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "DevOps-Primeros-Pasos",
              "Name": "app-demo-cluster-cluster"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c08e4ef0b6b4042c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:573636633956:security-group/sg-0fd6250adb330519b",
            "description": "EKS node shared security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all egress",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fd6250adb330519b",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 4443/tcp webhook",
                "from_port": 4443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0c6fd859db51a30fd"
                ],
                "self": false,
                "to_port": 4443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 6443/tcp webhook",
                "from_port": 6443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0c6fd859db51a30fd"
                ],
                "self": false,
                "to_port": 6443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 8443/tcp webhook",
                "from_port": 8443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0c6fd859db51a30fd"
                ],
                "self": false,
                "to_port": 8443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 9443/tcp webhook",
                "from_port": 9443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0c6fd859db51a30fd"
                ],
                "self": false,
                "to_port": 9443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node groups",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0c6fd859db51a30fd"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node kubelets",
                "from_port": 10250,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0c6fd859db51a30fd"
                ],
                "self": false,
                "to_port": 10250
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS UDP",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "Node to node ingress on ephemeral ports",
                "from_port": 1025,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 65535
              }
            ],
            "name": "app-demo-cluster-node-2025120522292705390000000a",
            "name_prefix": "app-demo-cluster-node-",
            "owner_id": "573636633956",
            "revoke_rules_on_delete": false,
            "tags": {
              "Example": "app-demo-cluster",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "DevOps-Primeros-Pasos",
              "Name": "app-demo-cluster-node",
              "kubernetes.io/cluster/app-demo-cluster": "owned"
            },
            "tags_all": {
              "Example": "app-demo-cluster",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "DevOps-Primeros-Pasos",
              "Name": "app-demo-cluster-node",
              "kubernetes.io/cluster/app-demo-cluster": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c08e4ef0b6b4042c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-1755170074",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0c6fd859db51a30fd",
            "security_group_rule_id": "sgr-0c2eb6894956ce47b",
            "self": false,
            "source_security_group_id": "sg-0fd6250adb330519b",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress",
            "from_port": 0,
            "id": "sgrule-2482499815",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0fd6250adb330519b",
            "security_group_rule_id": "sgr-0f6a66fbdd0948538",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-4227207197",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0fd6250adb330519b",
            "security_group_rule_id": "sgr-0da736c7d95f19eab",
            "self": false,
            "source_security_group_id": "sg-0c6fd859db51a30fd",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_4443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 4443/tcp webhook",
            "from_port": 4443,
            "id": "sgrule-3337488133",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0fd6250adb330519b",
            "security_group_rule_id": "sgr-0d360931579e64444",
            "self": false,
            "source_security_group_id": "sg-0c6fd859db51a30fd",
            "timeouts": null,
            "to_port": 4443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_6443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 6443/tcp webhook",
            "from_port": 6443,
            "id": "sgrule-262955155",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0fd6250adb330519b",
            "security_group_rule_id": "sgr-0a51afb50ba2c5f27",
            "self": false,
            "source_security_group_id": "sg-0c6fd859db51a30fd",
            "timeouts": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_8443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 8443/tcp webhook",
            "from_port": 8443,
            "id": "sgrule-485514418",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0fd6250adb330519b",
            "security_group_rule_id": "sgr-082961e1ab110c8f2",
            "self": false,
            "source_security_group_id": "sg-0c6fd859db51a30fd",
            "timeouts": null,
            "to_port": 8443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_9443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 9443/tcp webhook",
            "from_port": 9443,
            "id": "sgrule-2018602873",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0fd6250adb330519b",
            "security_group_rule_id": "sgr-04595f618a709c592",
            "self": false,
            "source_security_group_id": "sg-0c6fd859db51a30fd",
            "timeouts": null,
            "to_port": 9443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-2084630541",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0fd6250adb330519b",
            "security_group_rule_id": "sgr-00ad484bba7b71e2a",
            "self": false,
            "source_security_group_id": "sg-0c6fd859db51a30fd",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_ephemeral",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node ingress on ephemeral ports",
            "from_port": 1025,
            "id": "sgrule-3088780019",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0fd6250adb330519b",
            "security_group_rule_id": "sgr-05192bd56be65f6b1",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-470051073",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0fd6250adb330519b",
            "security_group_rule_id": "sgr-0987334f828b3127b",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS UDP",
            "from_port": 53,
            "id": "sgrule-3093023470",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-0fd6250adb330519b",
            "security_group_rule_id": "sgr-0d9cb146e88392ade",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:573636633956:network-acl/acl-03fe0676a57e9ca4a",
            "default_network_acl_id": "acl-03fe0676a57e9ca4a",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-03fe0676a57e9ca4a",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "573636633956",
            "subnet_ids": [
              "subnet-01bea0fd41c77c0a9",
              "subnet-026b840ba78ebe4f1",
              "subnet-05bd24578fbf9606a",
              "subnet-0697aca3f3756b229",
              "subnet-06e5adf4af2f4e891",
              "subnet-09bd0ef6b9b7fbc85",
              "subnet-0a5def2f7c549cbc9",
              "subnet-0b6d75cddf6eb6947",
              "subnet-0eb8f996d83c21e5a"
            ],
            "tags": {
              "Example": "app-demo-cluster",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "DevOps-Primeros-Pasos",
              "Name": "app-demo-cluster-default"
            },
            "tags_all": {
              "Example": "app-demo-cluster",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "DevOps-Primeros-Pasos",
              "Name": "app-demo-cluster-default"
            },
            "vpc_id": "vpc-0c08e4ef0b6b4042c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:573636633956:route-table/rtb-071e49dd551aa8ffa",
            "default_route_table_id": "rtb-071e49dd551aa8ffa",
            "id": "rtb-071e49dd551aa8ffa",
            "owner_id": "573636633956",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Example": "app-demo-cluster",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "DevOps-Primeros-Pasos",
              "Name": "app-demo-cluster-default"
            },
            "tags_all": {
              "Example": "app-demo-cluster",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "DevOps-Primeros-Pasos",
              "Name": "app-demo-cluster-default"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0c08e4ef0b6b4042c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:573636633956:security-group/sg-05d5c91142db0f08b",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-05d5c91142db0f08b",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "573636633956",
            "revoke_rules_on_delete": false,
            "tags": {
              "Example": "app-demo-cluster",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "DevOps-Primeros-Pasos",
              "Name": "app-demo-cluster-default"
            },
            "tags_all": {
              "Example": "app-demo-cluster",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "DevOps-Primeros-Pasos",
              "Name": "app-demo-cluster-default"
            },
            "vpc_id": "vpc-0c08e4ef0b6b4042c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0829c5daf860baf4a",
            "association_id": "eipassoc-054d376985aa5836b",
            "domain": "vpc",
            "id": "eipalloc-0829c5daf860baf4a",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0e9129f26b145b19f",
            "private_dns": "ip-10-0-4-219.ec2.internal",
            "private_ip": "10.0.4.219",
            "public_dns": "ec2-98-90-78-89.compute-1.amazonaws.com",
            "public_ip": "98.90.78.89",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Example": "app-demo-cluster",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "DevOps-Primeros-Pasos",
              "Name": "app-demo-cluster-us-east-1a"
            },
            "tags_all": {
              "Example": "app-demo-cluster",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "DevOps-Primeros-Pasos",
              "Name": "app-demo-cluster-us-east-1a"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:573636633956:internet-gateway/igw-0e3a931576949f04b",
            "id": "igw-0e3a931576949f04b",
            "owner_id": "573636633956",
            "tags": {
              "Example": "app-demo-cluster",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "DevOps-Primeros-Pasos",
              "Name": "app-demo-cluster"
            },
            "tags_all": {
              "Example": "app-demo-cluster",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "DevOps-Primeros-Pasos",
              "Name": "app-demo-cluster"
            },
            "vpc_id": "vpc-0c08e4ef0b6b4042c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0829c5daf860baf4a",
            "association_id": "eipassoc-054d376985aa5836b",
            "connectivity_type": "public",
            "id": "nat-07be16a82797bfb5d",
            "network_interface_id": "eni-0e9129f26b145b19f",
            "private_ip": "10.0.4.219",
            "public_ip": "98.90.78.89",
            "subnet_id": "subnet-0b6d75cddf6eb6947",
            "tags": {
              "Example": "app-demo-cluster",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "DevOps-Primeros-Pasos",
              "Name": "app-demo-cluster-us-east-1a"
            },
            "tags_all": {
              "Example": "app-demo-cluster",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "DevOps-Primeros-Pasos",
              "Name": "app-demo-cluster-us-east-1a"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0945e64fe2417af861080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-07be16a82797bfb5d",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0945e64fe2417af86",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0e3a931576949f04b",
            "id": "r-rtb-04f582decb2c4800c1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-04f582decb2c4800c",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "intra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:573636633956:route-table/rtb-0d28e77c0c275e082",
            "id": "rtb-0d28e77c0c275e082",
            "owner_id": "573636633956",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Example": "app-demo-cluster",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "DevOps-Primeros-Pasos",
              "Name": "app-demo-cluster-intra"
            },
            "tags_all": {
              "Example": "app-demo-cluster",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "DevOps-Primeros-Pasos",
              "Name": "app-demo-cluster-intra"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c08e4ef0b6b4042c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:573636633956:route-table/rtb-0945e64fe2417af86",
            "id": "rtb-0945e64fe2417af86",
            "owner_id": "573636633956",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-07be16a82797bfb5d",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Example": "app-demo-cluster",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "DevOps-Primeros-Pasos",
              "Name": "app-demo-cluster-private"
            },
            "tags_all": {
              "Example": "app-demo-cluster",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "DevOps-Primeros-Pasos",
              "Name": "app-demo-cluster-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c08e4ef0b6b4042c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:573636633956:route-table/rtb-04f582decb2c4800c",
            "id": "rtb-04f582decb2c4800c",
            "owner_id": "573636633956",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e3a931576949f04b",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Example": "app-demo-cluster",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "DevOps-Primeros-Pasos",
              "Name": "app-demo-cluster-public"
            },
            "tags_all": {
              "Example": "app-demo-cluster",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "DevOps-Primeros-Pasos",
              "Name": "app-demo-cluster-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c08e4ef0b6b4042c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "intra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dc8ab2a4e6dccfba",
            "route_table_id": "rtb-0d28e77c0c275e082",
            "subnet_id": "subnet-026b840ba78ebe4f1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.intra",
            "module.vpc.aws_subnet.intra",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-052ca3cdacc679d41",
            "route_table_id": "rtb-0d28e77c0c275e082",
            "subnet_id": "subnet-09bd0ef6b9b7fbc85"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.intra",
            "module.vpc.aws_subnet.intra",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f0d2a7b9b748ada6",
            "route_table_id": "rtb-0d28e77c0c275e082",
            "subnet_id": "subnet-01bea0fd41c77c0a9"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.intra",
            "module.vpc.aws_subnet.intra",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0939c478d38d6d10a",
            "route_table_id": "rtb-0945e64fe2417af86",
            "subnet_id": "subnet-05bd24578fbf9606a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0da88040f01a59874",
            "route_table_id": "rtb-0945e64fe2417af86",
            "subnet_id": "subnet-0eb8f996d83c21e5a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e5a22abbbbba3479",
            "route_table_id": "rtb-0945e64fe2417af86",
            "subnet_id": "subnet-0697aca3f3756b229"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0064ecbe7b3ac02e7",
            "route_table_id": "rtb-04f582decb2c4800c",
            "subnet_id": "subnet-0b6d75cddf6eb6947"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09649e1cdca3f67fd",
            "route_table_id": "rtb-04f582decb2c4800c",
            "subnet_id": "subnet-0a5def2f7c549cbc9"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0567e75f6ce4fd05c",
            "route_table_id": "rtb-04f582decb2c4800c",
            "subnet_id": "subnet-06e5adf4af2f4e891"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "intra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:573636633956:subnet/subnet-026b840ba78ebe4f1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.8.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-026b840ba78ebe4f1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "573636633956",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Example": "app-demo-cluster",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "DevOps-Primeros-Pasos",
              "Name": "app-demo-cluster-intra-us-east-1a"
            },
            "tags_all": {
              "Example": "app-demo-cluster",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "DevOps-Primeros-Pasos",
              "Name": "app-demo-cluster-intra-us-east-1a"
            },
            "vpc_id": "vpc-0c08e4ef0b6b4042c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:573636633956:subnet/subnet-09bd0ef6b9b7fbc85",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.9.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09bd0ef6b9b7fbc85",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "573636633956",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Example": "app-demo-cluster",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "DevOps-Primeros-Pasos",
              "Name": "app-demo-cluster-intra-us-east-1b"
            },
            "tags_all": {
              "Example": "app-demo-cluster",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "DevOps-Primeros-Pasos",
              "Name": "app-demo-cluster-intra-us-east-1b"
            },
            "vpc_id": "vpc-0c08e4ef0b6b4042c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:573636633956:subnet/subnet-01bea0fd41c77c0a9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01bea0fd41c77c0a9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "573636633956",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Example": "app-demo-cluster",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "DevOps-Primeros-Pasos",
              "Name": "app-demo-cluster-intra-us-east-1c"
            },
            "tags_all": {
              "Example": "app-demo-cluster",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "DevOps-Primeros-Pasos",
              "Name": "app-demo-cluster-intra-us-east-1c"
            },
            "vpc_id": "vpc-0c08e4ef0b6b4042c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:573636633956:subnet/subnet-05bd24578fbf9606a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05bd24578fbf9606a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "573636633956",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Example": "app-demo-cluster",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "DevOps-Primeros-Pasos",
              "Name": "app-demo-cluster-private-us-east-1a",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Example": "app-demo-cluster",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "DevOps-Primeros-Pasos",
              "Name": "app-demo-cluster-private-us-east-1a",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0c08e4ef0b6b4042c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:573636633956:subnet/subnet-0eb8f996d83c21e5a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0eb8f996d83c21e5a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "573636633956",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Example": "app-demo-cluster",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "DevOps-Primeros-Pasos",
              "Name": "app-demo-cluster-private-us-east-1b",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Example": "app-demo-cluster",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "DevOps-Primeros-Pasos",
              "Name": "app-demo-cluster-private-us-east-1b",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0c08e4ef0b6b4042c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:573636633956:subnet/subnet-0697aca3f3756b229",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0697aca3f3756b229",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "573636633956",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Example": "app-demo-cluster",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "DevOps-Primeros-Pasos",
              "Name": "app-demo-cluster-private-us-east-1c",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Example": "app-demo-cluster",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "DevOps-Primeros-Pasos",
              "Name": "app-demo-cluster-private-us-east-1c",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0c08e4ef0b6b4042c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:573636633956:subnet/subnet-0b6d75cddf6eb6947",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b6d75cddf6eb6947",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "573636633956",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Example": "app-demo-cluster",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "DevOps-Primeros-Pasos",
              "Name": "app-demo-cluster-public-us-east-1a",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Example": "app-demo-cluster",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "DevOps-Primeros-Pasos",
              "Name": "app-demo-cluster-public-us-east-1a",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0c08e4ef0b6b4042c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:573636633956:subnet/subnet-0a5def2f7c549cbc9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a5def2f7c549cbc9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "573636633956",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Example": "app-demo-cluster",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "DevOps-Primeros-Pasos",
              "Name": "app-demo-cluster-public-us-east-1b",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Example": "app-demo-cluster",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "DevOps-Primeros-Pasos",
              "Name": "app-demo-cluster-public-us-east-1b",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0c08e4ef0b6b4042c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:573636633956:subnet/subnet-06e5adf4af2f4e891",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06e5adf4af2f4e891",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "573636633956",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Example": "app-demo-cluster",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "DevOps-Primeros-Pasos",
              "Name": "app-demo-cluster-public-us-east-1c",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Example": "app-demo-cluster",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "DevOps-Primeros-Pasos",
              "Name": "app-demo-cluster-public-us-east-1c",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0c08e4ef0b6b4042c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:573636633956:vpc/vpc-0c08e4ef0b6b4042c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-03fe0676a57e9ca4a",
            "default_route_table_id": "rtb-071e49dd551aa8ffa",
            "default_security_group_id": "sg-05d5c91142db0f08b",
            "dhcp_options_id": "dopt-0efd3593d19621c86",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c08e4ef0b6b4042c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-071e49dd551aa8ffa",
            "owner_id": "573636633956",
            "tags": {
              "Example": "app-demo-cluster",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "DevOps-Primeros-Pasos",
              "Name": "app-demo-cluster"
            },
            "tags_all": {
              "Example": "app-demo-cluster",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "DevOps-Primeros-Pasos",
              "Name": "app-demo-cluster"
            }
          },
          "identity_schema_version": 0,
          "create_before_destroy": true
        }
      ]
    }
  ]
}